# libgxim

./: Makefile  README.md  libgxim.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  libgxim-uninstalled.pc.in  libgxim.pc  libgxim.pc.in  requires
src/docs/: Makefile.am  Makefile.in
src/docs/reference/: Makefile.am  Makefile.in  libgxim-docs.sgml  libgxim-sections.txt  libgxim.types
src/docs/reference/html/: GXimClientConnection.html  GXimClientTemplate.html  GXimConnection.html  GXimCore.html  GXimICAttr.html  GXimIMAttr.html  GXimMessage.html  GXimMessages.html  GXimProtocol.html  GXimServerConnection.html  GXimServerTemplate.html  GXimTransport.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  index.html  index.sgml  ix01.html  libgxim-gximerror.html  libgxim-gximmisc.html  libgxim-gximprotocol.html  libgxim-gximtransport.html  libgxim.devhelp  libgxim.devhelp2  libgxim.html
src/docs/reference/tmpl/: gximattr.sgml  gximclconn.sgml  gximcltmpl.sgml  gximconnection.sgml  gximcore.sgml  gximerror.sgml  gximmessage.sgml  gximmessages.sgml  gximmisc.sgml  gximprotocol.sgml  gximsrvconn.sgml  gximsrvtmpl.sgml  gximtransport.sgml  gximtypes.sgml  libgxim.sgml
src/docs/reference/xml/: gximattr.xml  gximclconn.xml  gximcltmpl.xml  gximconnection.xml  gximcore.xml  gximerror.xml  gximmessage.xml  gximmisc.xml  gximprotocol.xml  gximsrvconn.xml  gximsrvtmpl.xml  gximtransport.xml  gximtypes.xml
src/libgxim/: Makefile.am  Makefile.in  gximacc.c  gximacc.h  gximattr.c  gximattr.h  gximclconn.c  gximclconn.h  gximcltmpl.c  gximcltmpl.h  gximconnection.c  gximconnection.h  gximcore.c  gximcore.h  gximerror.c  gximerror.h  gximmarshal.c  gximmarshal.h  gximmessage.c  gximmessage.h  gximmessages.c  gximmessages.h  gximmisc.c  gximmisc.h  gximprotocol.c  gximprotocol.h  gximprotocol10.c  gximprotocol10.h  gximsrvconn.c  gximsrvconn.h  gximsrvtmpl.c  gximsrvtmpl.h  gximtransport.c  gximtransport.h  gximtypes.h  libgxim.h  marshal.list  mkacc.rb
src/m4macros/: Makefile.am  Makefile.in
src/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu_ES.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  (+37 more)
src/tests/: Makefile.am  Makefile.in  gximmessage.c  gximmessages.c  gximmisc.c  gximtransport.c  main.c  main.h
